# orasync

./: README.md  pyproject.toml
examples/gimp-poc/orasync-poc/: orasync-poc.py
examples/krita-poc/: orasync_poc.desktop
examples/krita-poc/orasync_poc/: __init__.py  extension.py
src/orasync/: __init__.py  api.py  cli.py  errors.py  gitrepo.py  lock.py  ora.py  paths.py  state.py  sync.py
tests/: test_ora.py  test_paths.py  test_sync.py
