[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orasync"
version = "0.1.0"
description = "Small OpenRaster-to-Git sync helper for editor extensions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ArtificeX" }
]
dependencies = []

[project.scripts]
orasync = "orasync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

